html files added

--- a/frontend works/html works/home.html
+++ b/frontend works/html works/home.html
@@ -40,6 +40,10 @@
             </tr>
         </table>    
     </main>
+    <footer>
+        <img src="./images/facebook--600.png" alt=""width="10%" height="10%">
+        <img src="./images/instagram.jfif" alt="">
+    </footer>
     
 </body>
 </html>
