--- a/frontend works/css works/spectrum.html
+++ b/frontend works/css works/spectrum.html
@@ -5,17 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./box_style.css">
+    <link rel="stylesheet" href="./spectrumstyle.css">
 </head>
 <body>
-    <div class="head">
-        <a href="">Home</a>
-        <a href="">About</a>
-    </div>
-    <div class="foot">
-    footer
-    </div>
-
-
+    <h1>Spectrum V EllsworthKelly</h1>
+    
 </body>
 </html>
